--- a/templates/post.html
+++ b/templates/post.html
@@ -46,10 +46,33 @@
 
                 </article>
 
-                <!--
 
                 <section id="comments">
 
+                    {% load disqus_tags %}
+                    {% set_disqus_identifier post.id %}
+                    {% disqus_show_comments %}
+
+                    <!--
+                    <div id="disqus_thread"></div>
+                        <script type="text/javascript">
+                            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+                            var disqus_shortname = 'mettentot'; // required: replace example with your forum shortname
+
+                            /* * * DON'T EDIT BELOW THIS LINE * * */
+                            (function() {
+                                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                            })();
+                        </script>
+                        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+                    -->
+
+                </section>
+
+                <!--
                     <h3>4 Responses</h3>
 
                     <ol class="commentlist">
@@ -261,25 +284,23 @@
             ================================================== -->
             <aside id="sidebar" class="grid3 add-margin-top">
 
-                <h3>Text Widget</h3>
+                <h3>About Me</h3>
 
                 <p>
-                    Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
-                    nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate
-                    cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a
-                    ornare odio.
+                    My name is Andy and I am a software engineer in Omaha, NE.
+                    I'm currently working on the startup 5years.me
                 </p>
 
-                <h3>Categories</h3>
+                <h3>Good Sites</h3>
 
                 <ul class="link-list">
-                    <li><a href="#">Designs</a></li>
-                    <li><a href="#">Internet</a></li>
-                    <li><a href="#">Typography</a></li>
-                    <li><a href="#">Photography</a></li>
-                    <li><a href="#">Web Development</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Other Stuff</a></li>
+                    <li><a href="https://news.ycombinator.com/">Hacker News</a></li>
+                    <li><a href="http://www.reddit.com/r/MachineLearning/">Reddit Machine Learning</a></li>
+                    <li><a href="http://www.cloudera.com/content/cloudera/en/training/roles/analysts.html">Cloudera Training</a></li>
+                    <li><a href="http://imgur.com/a/UP5k0">Best Prank Gifs</a></li>
+                    <li><a href="http://thebluthcompany.tumblr.com/">Bluth Company Tumblrt</a></li>
+                    <li><a href="http://99u.com/articles">99U - Insignts on Making Ideas Happen</a></li>
+                    <li><a href="http://paulgraham.com/articles.html">Paul Graham Essays</a></li>
                 </ul>
 
                 <h3>Popular Post</h3>
@@ -287,26 +308,7 @@
                 <ul class="popular-list">
                     <li>
                         <a href="#">
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                            <span>June 22, 2013</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            Cras fringilla magna. Phasellus suscipit.
-                            <span>June 20, 2013</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            Morbi tincidunt, orci ac convallis aliquam.
-                            <span>June 15, 2013</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#l">
-                            Ipsum dolor sit amet, consectetuer adipiscing elit.
-                            <span>June 14, 2013</span>
+                            None Yet
                         </a>
                     </li>
                 </ul>
