--- a/templates/indexer.html
+++ b/templates/indexer.html
@@ -5,6 +5,10 @@
     <meta name="description" content=""/>
     <script src="{{ STATIC_URL }}js/app/controllers/app-controller.js"></script>
     <script src="{{ STATIC_URL }}js/app/controllers/feed-controller.js"></script>
+
+    <script src="{{ STATIC_URL }}js/app/controllers/adder-controller.js"></script>
+    <script src="{{ STATIC_URL }}js/app/services/adder-service.js"></script>
+
     <script src="{{ STATIC_URL }}js/app/services/app-service.js"></script>
     <script src="{{ STATIC_URL }}js/app/services/tags-service.js"></script>
     <script src="{{ STATIC_URL }}js/app/services/search-service.js"></script>
