--- a/templates/general.html
+++ b/templates/general.html
@@ -1,6 +1,6 @@
 
 <!-- App Dependent -->
-
+{% load ganalytics %}
 <!doctype html>
 <!--[if lt IE 7]> <html ng-app="Tipstry" class="no-js lt-ie9 lt-ie8 lt-ie7" lang="{{ LANGUAGE_CODE }}"> <![endif]-->
 <!--[if IE 7]>    <html ng-app="Tipstry" class="no-js lt-ie9 lt-ie8" lang="{{ LANGUAGE_CODE }}"> <![endif]-->
@@ -28,7 +28,7 @@
 	<script src="{{ STATIC_URL }}js/libs/angular/angular.min.js"></script>
 	<script src="{{ STATIC_URL }}js/libs/angular/angular-resource.min.js"></script>
     <script src="{{ STATIC_URL }}js/libs/angular/angular-cookies.min.js"></script>
-    
+
     <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.5.0.js"></script>
 
 
@@ -39,7 +39,7 @@
 
 
 
-
+    {% ganalytics %}
 
 	{% block extra_head %}{% endblock %}
 
@@ -54,13 +54,13 @@
             <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
             <!-- put your page content in here -->
             <!-- Adding the ng-app declaration to initialize AngularJS -->
-            
+
             <div id="sp-nav" class="hide">
                 <nav >
                     <!-- When a link in the menu is clicked, we set the active variable -->
                     <a href="#" class="home" >Interests</a>
                     <a href="#/jobs" class="jobs">Jobs</a>
-                    <a href="#" class="calendar">Calendar</a>
+                    <a href="#/calendar" class="calendar">Calendar</a>
                     <a href="#" class="performance">Performance</a>
                     <a href="#/add" class="add">Add Items</a>
                 </nav>
@@ -106,6 +106,6 @@ DONE 5. updates ALL of the scraper back end code
 5. urls to include new messages API
 DONE 6. view to include Adder views
 DONE 7. years model!  huge
-DONE 8. add gooser stuff 
+DONE 8. add gooser stuff
 DONE 9. scraper module
 -->
