Prior to adding calendar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -626,4 +626,6 @@ legend span {
 .pull-left    { float: left; }
 .pull-right   { float: right; }
 
-
+form ul li.active{
+   background-color:#8ec16d;
+}
