--- a/templates/base.html
+++ b/templates/base.html
@@ -59,12 +59,12 @@
                     href="/blog/archives">Archives</a></li>
                     <li><a href="/metten">About</a></li>
                     <li>
-                        <a href="5years">5years +</a>
+                        <a href="/5years">5years +</a>
                         <ul>
-                            <li><a href="5years"><span>- </span>Interests</a></li>
-                            <li><a href="5years/#/jobs"><span>- </span>Jobs</a></li>
-                            <li><a href="5years/#/calendar"><span>- </span>Calendar</a></li>
-                            <li><a href="5years/#/add"><span>- </span>Add Items</a></li>
+                            <li><a href="/5years"><span>- </span>Interests</a></li>
+                            <li><a href="/5years/#/jobs"><span>- </span>Jobs</a></li>
+                            <li><a href="/5years/#/calendar"><span>- </span>Calendar</a></li>
+                            <li><a href="/5years/#/add"><span>- </span>Add Items</a></li>
                         </ul>
                     </li>
 
