--- a/templates/metten.html
+++ b/templates/metten.html
@@ -5,9 +5,11 @@
 
 {% block content %}
 
+<h4>THE COMPANY</h4>
+
 <p>
 
-    The company, MTW Ventures, was started in 2013 with the goal of using measurement and analytics to promote structure and progress in the careers and education space.  The company’s title stands for “Metten Tot Wetten,” a Dutch saying which means “From Measuring to Knowing.”
+    MTW Ventures, was started in 2013 with the goal of using measurement and analytics to promote structure and progress in the careers and education space.  The company’s title stands for “Metten Tot Wetten,” a Dutch saying which means “From Measuring to Knowing.”
 
 </p>
 
@@ -33,6 +35,16 @@
     </li>
 
 </ol>
+
+<hr>
+
+<h4>THE TEAM</h4>
+<p>
+    Founder, Andy MacKrell is an experience software engineer in Omaha, NE.
+</p>
+<p>
+He graduated from University of Notre Dame in 2008 with a degree in Mechanical Engineering and has been tinkering in hardware and software ever since.
+</p>
 
 
 
