--- a/static/js/app/views/feed.html
+++ b/static/js/app/views/feed.html
@@ -3,6 +3,11 @@
     <div class="span10 main">
         <!-- Declare a new AngularJS app and associate the controller -->
 
+        <p class='lead'> Thanks for vising 5years!  This is not a fully functioning app, only a development sandbox.
+        That said, we'd love to have your thoughts and feedback on how it should work.
+        Email andy@mettentotwetten.com if you'd like to help out!
+        </p>
+
         <div>
             <h3>Search Interests</h3>
             <form class="well form-search">
@@ -20,15 +25,15 @@
             {[{dater}]}
         </div>-->
 
-    
+
 
             <tabset>
 
                 <tab heading="Meetings">
 
-                    <form class="well form-search">
+                    <form class="well">
                         <accordion close-others="oneAtATime">
-                            <accordion-group is-open="isopen">
+                            <accordion-group is-open="true">
                                 <accordion-heading>
                                     <h3>Meetup</h3>
                                 </accordion-heading>
@@ -45,10 +50,14 @@
                                             </accordion-heading>
 
 
-                                            {[{stay.desc}]}
-                                            <b>Length: </b>  {[{stay.length}]}
-                                            <a href="{[{stay.url}]}">Check Out the Site</a>
+                                            {[{stay.desc | htmlToPlaintext}]}
+                                            <!--<b>Length: </b>  {[{stay.length}]}-->
+                                            <br>
+
+                                            <b>
+                                            <a href="{[{stay.url}]}" style="float:left">Check Out the Site</a>
                                             <a style="float:right;" ng-click="toggleActive(stay)">Save This</a>
+                                            </b>
                                         </accordion-group>
                                     </accordion>
 
@@ -60,7 +69,7 @@
                     </form>
 
 
-                    <form class="well form-search">
+                    <form class="well">
                         <accordion close-others="oneAtATime">
                             <accordion-group is-open="isopen">
                                 <accordion-heading>
@@ -92,23 +101,186 @@
                         </accordion>
 
                     </form>
-                    
+
                 </tab>
 
 
                 <tab heading="People">
-                    {[{daters_linked}]}
+
+
+                    <form class="well">
+                        <accordion close-others="oneAtATime">
+                            <accordion-group is-open="isopen">
+                                <accordion-heading>
+                                    <h3>LinkedIn</h3>
+                                </accordion-heading>
+
+
+                                <ul>
+                                    <li ng-class="{active:stay.active}" ng-repeat="(k2, stay) in daters_linked"</li>
+                                    <accordion close-others="oneAtATime">
+                                        <accordion-group is-open="isopen">
+                                            <accordion-heading>
+
+                                                <h3>{[{stay.title}]}</h3> <p>{[{stay.date}]}</p>
+
+                                            </accordion-heading>
+
+
+                                            {[{stay.desc}]}
+                                            <b>Length: </b>  {[{stay.length}]}
+                                            <a href="{[{stay.url}]}">Check Out the Site</a>
+                                            <a style="float:right;" ng-click="toggleActive(stay)">Save This</a>
+                                        </accordion-group>
+                                    </accordion>
+
+                                </ul>
+
+                            </accordion-group>
+                        </accordion>
+
+                    </form>
 
                 </tab>
                 <tab heading="Courses">
-                    {[{daters_coursera}]}
+                    <form class="well">
+                        <accordion close-others="oneAtATime">
+                            <accordion-group is-open="isopen">
+                                <accordion-heading>
+                                    <h3>Coursera</h3>
+                                </accordion-heading>
+
+
+                                <ul>
+                                    <li ng-class="{active:stay.active}" ng-repeat="(k2, stay) in daters_coursera"</li>
+                                    <accordion close-others="oneAtATime">
+                                        <accordion-group is-open="isopen">
+                                            <accordion-heading>
+
+                                                <h3>{[{stay.title}]}</h3> <p>{[{stay.date}]}</p>
+
+                                            </accordion-heading>
+
+
+                                            {[{stay.desc}]}
+                                            <b>Length: </b>  {[{stay.length}]}
+                                            <a href="{[{stay.url}]}">Check Out the Site</a>
+                                            <a style="float:right;" ng-click="toggleActive(stay)">Save This</a>
+                                        </accordion-group>
+                                    </accordion>
+
+                                </ul>
+
+                            </accordion-group>
+                        </accordion>
+
+                    </form>
 
                 </tab>
 
                 <tab heading="Content">
-                    {[{daters_alltop}]}
-                    {[{daters_amazon}]}
-                    {[{daters_tunes}]}
+
+
+                    <form class="well">
+                        <accordion close-others="oneAtATime">
+                            <accordion-group is-open="isopen">
+                                <accordion-heading>
+                                    <h3>Popular Articles</h3>
+                                </accordion-heading>
+
+
+                                <ul>
+                                    <li ng-class="{active:stay.active}" ng-repeat="(k2, stay) in daters_alltop"</li>
+                                    <accordion close-others="oneAtATime">
+                                        <accordion-group is-open="isopen">
+                                            <accordion-heading>
+
+                                                <h3>{[{stay.title}]}</h3> <p>{[{stay.date}]}</p>
+
+                                            </accordion-heading>
+
+
+                                            {[{stay.desc}]}
+                                            <b>Length: </b>  {[{stay.length}]}
+                                            <a href="{[{stay.url}]}">Check Out the Site</a>
+                                            <a style="float:right;" ng-click="toggleActive(stay)">Save This</a>
+                                        </accordion-group>
+                                    </accordion>
+
+                                </ul>
+
+                            </accordion-group>
+                        </accordion>
+
+                    </form>
+
+
+                    <form class="well">
+                        <accordion close-others="oneAtATime">
+                            <accordion-group is-open="isopen">
+                                <accordion-heading>
+                                    <h3>Amazon Books</h3>
+                                </accordion-heading>
+
+
+                                <ul>
+                                    <li ng-class="{active:stay.active}" ng-repeat="(k2, stay) in daters_amazon"</li>
+                                    <accordion close-others="oneAtATime">
+                                        <accordion-group is-open="isopen">
+                                            <accordion-heading>
+
+                                                <h3>{[{stay.title}]}</h3> <p>{[{stay.date}]}</p>
+
+                                            </accordion-heading>
+
+
+                                            {[{stay.desc}]}
+                                            <b>Length: </b>  {[{stay.length}]}
+                                            <a href="{[{stay.url}]}">Check Out the Site</a>
+                                            <a style="float:right;" ng-click="toggleActive(stay)">Save This</a>
+                                        </accordion-group>
+                                    </accordion>
+
+                                </ul>
+
+                            </accordion-group>
+                        </accordion>
+
+                    </form>
+
+
+                    <form class="well">
+                        <accordion close-others="oneAtATime">
+                            <accordion-group is-open="isopen">
+                                <accordion-heading>
+                                    <h3>ITunes Podcasts</h3>
+                                </accordion-heading>
+
+
+                                <ul>
+                                    <li ng-class="{active:stay.active}" ng-repeat="(k2, stay) in daters_tunes"</li>
+                                    <accordion close-others="oneAtATime">
+                                        <accordion-group is-open="isopen">
+                                            <accordion-heading>
+
+                                                <h3>{[{stay.title}]}</h3> <p>{[{stay.date}]}</p>
+
+                                            </accordion-heading>
+
+
+                                            {[{stay.desc}]}
+                                            <b>Length: </b>  {[{stay.length}]}
+                                            <a href="{[{stay.url}]}">Check Out the Site</a>
+                                            <a style="float:right;" ng-click="toggleActive(stay)">Save This</a>
+                                        </accordion-group>
+                                    </accordion>
+
+                                </ul>
+
+                            </accordion-group>
+                        </accordion>
+
+                    </form>
 
 
                 </tab>
@@ -117,44 +289,11 @@
 
             <hr />
 
-
-                <form class="well form-search" ng-repeat="(site_name, dater) in daters">
-                    <accordion close-others="oneAtATime">
-                        <accordion-group is-open="isopen">
-                            <accordion-heading>
-                                <h3>{[{site_name}]}</h3>
-                            </accordion-heading>
-
-
-                            <ul>
-                                <li ng-class="{active:stay.active}" ng-repeat="(k2, stay) in dater"</li>
-                                <accordion close-others="oneAtATime">
-                                    <accordion-group is-open="isopen">
-                                        <accordion-heading>
-
-                                            <h3>{[{stay.title}]}</h3> <p>{[{stay.date}]}</p>
-
-                                        </accordion-heading>
-
-
-                                        {[{stay.desc}]}
-                                        <b>Length: </b>  {[{stay.length}]}
-                                        <a href="{[{stay.url}]}">Check Out the Site</a>
-                                        <a style="float:right;" ng-click="toggleActive(stay)">Save This</a>
-                                    </accordion-group>
-                                </accordion>
-
-                            </ul>
-
-                        </accordion-group>
-                    </accordion>
-
-                </form>
 </div>
 
 
 
-        
+
 
         <!--      Modal Popup       -->
         <div class="row">
@@ -215,7 +354,7 @@
                 </div>
             </div>
         </div>
-      
+
 
 
 </div>
