--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -859,5 +859,5 @@ footer ul.photostream li a {
    color: transparent;
 }
 #go-top a:hover { background-color: #1E83B6; }
-£menu { display: none; }
+#menu { display: none; }
 
