--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -174,11 +174,12 @@ header #nav-wrap {
    border-bottom: 1px solid #e4e3e3;
 }
 #menu {
-   height: 36px;
+   height: 34px;
    width: auto;
    margin: 0;
    padding: 0;
    text-align: left;
+   display:none;
   
 }
 #menu li {
