--- a/templates/linked_html.html
+++ b/templates/linked_html.html
@@ -15,7 +15,7 @@
 <div class="accordionButton">
   <h3>{{key}}</h3>
 </div>
-  <div class="accordionContent">
+  <div class="">
     <p>
     {% for data in value %}
     <li>
