--- a/templates/linked_html.html
+++ b/templates/linked_html.html
@@ -12,10 +12,10 @@
 <body>
 {% block content %}
   {% for key,value in results.items %}
-<div class="accordionButton">
+<div class="">
   <h3>{{key}}</h3>
 </div>
-  <div class="">
+  <div class="accordionContent">
     <p>
     {% for data in value %}
     <li>
