--- a/templates/linked_html.html
+++ b/templates/linked_html.html
@@ -20,6 +20,8 @@
     {% for data in value %}
     <li>
         <p>{{data.title}}</p>
+         <p>{{data.title}}</p>
+        <p>{{data.title}}</p>
         <p>{{data.date}}</p>
         <p>{{data.author}}</p>
         <p>{{data.url}}</p>
