--- a/templates/linked_html.html
+++ b/templates/linked_html.html
@@ -12,7 +12,7 @@
 <body>
 {% block content %}
   {% for key,value in results.items %}
-<div class="">
+<div class="accordionButton">
   <h3>{{key}}</h3>
 </div>
   <div class="accordionContent" style="display: none;">
