--- a/templates/linked_html.html
+++ b/templates/linked_html.html
@@ -19,7 +19,16 @@
     <p>
     {% for data in value %}
     <li>
-       
+       <p>{{data.title}}</p>
+        <p>{{data.date}}</p>
+        <p>{{data.author}}</p>
+        <p>{{data.url}}</p>
+        <p>{{data.location}}</p>
+        <p>{{data.company}}</p>
+        <p>{{data.collectionName}}</p>
+        <p>{{data.primaryGenreName}}</p>
+        <p>{{data.course_page}}</p>
+        <p>{{data.feedURL}}</p> 
     </li>
     {% endfor %}
     </p>
