--- a/templates/linked_html.html
+++ b/templates/linked_html.html
@@ -5,8 +5,8 @@
 {% block head %}
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>jQuery Accordion Style DIV Menu</title>
-<!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"> </script>
-<script type="text/javascript" src="../static/js/javascript.js"> </script-->
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"> </script>
+<script type="text/javascript" src="../static/js/javascript.js"> </script>
 {% endblock %}
 
 <body>
