--- a/templates/linked_html.html
+++ b/templates/linked_html.html
@@ -13,7 +13,7 @@
 {% block content %}
   {% for key,value in results.items %}
 <div class="accordionButton">
-  
+  <h3>{{key}}</h3>
 </div>
   <div class="accordionContent" >
     <p>
