--- a/templates/metten.html
+++ b/templates/metten.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+% extends "base.html" %}
 
 <body>
 
@@ -8,7 +8,7 @@
 
 <p>
 
-   
+    MTW Ventures, was started in 2013 with the goal of using measurement and analytics to promote structure and progress in the careers and education space.  The company’s title stands for “Metten Tot Wetten,” a Dutch saying which means “From Measuring to Knowing.”
 
 </p>
 
