--- a/templates/linked_html.html
+++ b/templates/linked_html.html
@@ -34,7 +34,9 @@
     </p>
   </div>
   {% endfor %}
-
+<div class="accordionButton">
+  <h3>Youtube</h3>
+  </div>
   <div class="accordionContent">
   <p>coming soon</p>
   </div>
